# BRAINS4

./: .cvsignore  CMakeLists.txt  CTestConfig.cmake  CTestCustom.ctest  README  TODO  ValgrindSuppression.supp  brains3variables2.tcl  doxygen.cfg  nipype_autoworkup.tar.bz2  preRemoveCableSwig.txt  variable_conversions.sh
CMake/: DiscoverSystemNameAndBits.cmake  FindGit.cmake  ForwardPathMacros.cmake  ForwardPathProgram.c.in  RemoveTemporaryFiles.cmake.in  Slicer3FindQT.cmake  Slicer3Macros.cmake  Slicer3ModuleLogicMacros.cmake  Slicer3ModulesMacros.cmake  Slicer3ParseArgumentsMacro.cmake  Slicer3PatchPythonQt.cmake.in  Slicer3PluginsMacros.cmake  Slicer3QTBaseLibraryMacros.cmake  Slicer3QTModuleMacros.cmake  Slicer3SampleBuildTest.cmake.in  Slicer3TodayMacro.cmake
CMake/cuda/: CudaDependency.cmake
SlicerPatches/: BatchMakeUtilities.cxx  CMakeLists-Slicer-CLI.txt  ModuleFactoryTest.cxx  ModuleProcessInformation.h  QdecDataTable.cpp  QdecFactor.cpp  QdecGlmDesign.cpp  QdecGlmFit.cpp  QdecProject.cpp  QdecSubject.cpp  QdecUtilities.cpp  genlib3.tcl  getbuildtest3.tcl  itkSpatialObjectTreeNode.h  slicer_variables3.tcl  slicerio.c  vtkFibersManager.cxx  vtkImageConnectivity.cxx  vtkKWDICOMExporter.cxx  vtkKWTimeAnimationWidget.cxx  vtkRectangle.cxx  vtkTextureText.h  vtkTimeDef.h
SuperBuild/: CTestCustom.cmake.in  Deploy.cmake  ETSTraits_configure_step.cmake.in  ETSTraits_make_step.cmake.in  External_BRAINSCommonLib.cmake  External_BRAINSTracerQT.cmake  External_BatchMake.cmake  External_CLAPACK.cmake  External_CMTK.cmake  External_CTK.cmake  External_ETSTraits.cmake  External_FFTW.cmake  External_HDF5.cmake  External_ITKv4.cmake  External_MATPLOTLIB.cmake  External_NETWORKX.cmake  External_NIBABEL.cmake  External_NIPYPE.cmake  External_NUMPY.cmake  External_OpenCV.cmake  External_OpenIGTLink.cmake  External_PYTHONSETUPTOOLS.cmake  External_Python26.cmake  External_ReferenceAtlas.cmake  External_SIMPLEJSON.cmake  External_SPYDER.cmake  External_SimpleITK.cmake  External_SlicerExecutionModel.cmake  External_Swig.cmake  External_VTK.cmake  External_cmcurl.cmake  External_teem.cmake  External_vv.cmake  IPYTHON_configure_step.cmake.in  IPYTHON_make_step.cmake.in  MATPLOTLIB_configure_step.cmake.in  MATPLOTLIB_make_step.cmake.in  NETWORKX_configure_step.cmake.in  NETWORKX_make_step.cmake.in  NIBABEL_configure_step.cmake.in  (+19 more)
SuperBuild/SPYDER/: CMakeLists.txt
SuperBuild/backup/: External_IPYTHON.cmake  External_MATPLOTLIB.cmake  External_NETWORKX.cmake  External_NIBABEL.cmake  External_NIPYPE.cmake  External_NUMPY.cmake  External_PYTHONSETUPTOOLS.cmake  External_SciPy.cmake  IPYTHON_configure_step.cmake.in  MATPLOTLIB_configure_step.cmake.in  NUMPY_configure_step.cmake.in  NUMPY_make_step.cmake.in  SIMPLEJSON_make_step.cmake.in
docs/: AutoWorkupStage.dia  RemapT1Intensity.dia
nipype_autoworkup/: .nipype.cfg  AutoTalairachParameters.py  AutoTalairachParameters.tcl  BRAINSABC.py  BRAINSAlignMSP.py  BRAINSApplySurfaceLabels.py  BRAINSClassPlugs.py  BRAINSClassify.py  BRAINSCleanMask.py  BRAINSClipInferior.py  BRAINSConstellationDetector.py  BRAINSConstellationDetector.sh  BRAINSConstellationModeler.py  BRAINSCut.py  BRAINSDemonWarp.py  BRAINSDiscreteClass.py  BRAINSFit.py  BRAINSInitilizedControlPoints.py  BRAINSLinearModelerEPCA.py  BRAINSLmkTransform.py  BRAINSMeasureSurface.py  BRAINSMultiModeSegment.py  BRAINSMush.py  BRAINSROIAuto.py  BRAINSResample.py  BRAINSTalairach.py  BRAINSTalairachMask.py  BRAINSTrimForegroundInDirection.py  BrainsAutoWorkup.py  BrainsAutoWorkup.py_20110527_0154_backup  BrainsAutoWorkup.py_backup  ClassTalairachVolumes.py  ClassTalairachVolumes.tcl  ClipAndAverageTwo.py  ClipAndAverageTwo.tcl  CreateAutoLabelBrainSurface.py  CreateAutoLabelBrainSurface.tcl  CreateBrainSurface.py  CreateBrainSurface.tcl  CreateGenusZeroBrainSurface.py  (+82 more)
